# ordbyggaren

./: README.md  pyproject.toml
.github/workflows/: build-deb.yml  build-rpm.yml
.tx/: config
data/: ordbyggaren.desktop
locale/sv/LC_MESSAGES/: ordbyggaren.mo
po/: ordbyggaren.pot  sv.mo  sv.po
src/ordbyggaren/: __main__.py  export.py  main.py  window.py
