[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ordbyggaren"
version = "0.2.5"
description = "Phonological training app - build words from sounds and letters"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [
    {name = "Daniel Nylander"}
]

[project.scripts]
ordbyggaren = "ordbyggaren.main:main"

[tool.setuptools.packages.find]
where = ["src"]
